ghc-4335c07/testsuite/tests/rename/should_fail/T10668.hs
module T10668 where

import Data.Type.Equality(Refl)
